--- a/src/LoginWindow.form
+++ b/src/LoginWindow.form
@@ -93,12 +93,12 @@
         </constraints>
         <properties/>
       </component>
-      <component id="2a815" class="javax.swing.JButton" binding="button1">
+      <component id="2a815" class="javax.swing.JButton" binding="bt_create">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Create"/>
         </properties>
       </component>
       <component id="e73e3" class="javax.swing.JLabel" binding="Port">
@@ -107,6 +107,14 @@
         </constraints>
         <properties>
           <text value="Label"/>
+        </properties>
+      </component>
+      <component id="3945d" class="javax.swing.JButton" binding="joinButton" default-binding="true">
+        <constraints>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Join"/>
         </properties>
       </component>
     </children>
