--- a/src/LoginWindow.form
+++ b/src/LoginWindow.form
@@ -98,7 +98,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Create"/>
         </properties>
       </component>
       <component id="e73e3" class="javax.swing.JLabel" binding="Port">
